# memphis.py

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  http_request.py  main.py  main2.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/scripts/quickstart_py/: package-lock.json  package.json  update_quickstart_py.js
.github/workflows/: auto_update_quick_start.yml  pylint.yml  test.yml
examples/: consumer.py  full_example.py  functions.py  producer.py
memphis/: __init__.py  consumer.py  exceptions.py  functions.py  headers.py  http_request.py  memphis.py  message.py  partition_generator.py  producer.py  retention_types.py  station.py  storage_types.py  types.py  utils.py
memphis-py/: storage_types.py
